added map pins and state capital to header with seal of the state

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,13 @@
 </head>
 <body>
     <header>
-        <h1>Georgia Water Compliance Hub</h1>
-        <p>Real-time communication for regulators and operators.</p>
+        <div class="header-content">
+            <img src="/georgia/891-004-1A660847.jpg.webp" alt="Georgia State Seal" class="state-seal">
+            <div>
+                <h1>Georgia Water Compliance Hub</h1>
+                <p>Real-time communication for regulators and operators.</p>
+            </div>
+        </div>
     </header>
 
     <main>
