enhance map functionality with controls for expanding view and filtering violations

--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,19 @@
 
             <!-- Middle Column: Map and Details -->
             <div class="view-section" id="middle-column">
-                <h2>System Information</h2>
-                <div id="map"></div>
+                <div class="map-header">
+                    <h2>System Information</h2>
+                    <div class="map-controls">
+                        <button id="expand-map-btn" class="map-control-btn">🔍 Expand Map</button>
+                        <label class="filter-control">
+                            <input type="checkbox" id="show-violations-only" checked> Violations Only
+                        </label>
+                        <label class="filter-control">
+                            <input type="checkbox" id="show-compliant"> Show Compliant
+                        </label>
+                    </div>
+                </div>
+                <div id="map" class="map-normal"></div>
                 <hr>
                 <div id="system-details">
                     <p>Select a system to view details and violations.</p>
